# anselm

./: Anselm.cpp  CMakeLists.txt  Context.cpp  Context.h  Dockerfile  Graph.cpp  Pattern.cpp  Pattern.h  README.md  run.sh
tests/: pattern.txt  program.bc  program.c
